homeworks/14-kuber-05-policy/manifests/10-app.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: ta
  namespace: team-a
  labels:
    app: ta
    run: nginx
spec:
  containers:
    - name: nginx
      imagePullPolicy: IfNotPresent
      image: joshrosso/nginx-curl:v2
---
apiVersion: v1
kind: Service
metadata:
  name: ta
  namespace: team-a
spec:
  type: NodePort
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 80
      nodePort: 30001
  selector:
    app: ta
---
apiVersion: v1
kind: Pod
metadata:
  name: tb
  namespace: team-b
  labels:
    app: tb
    run: nginx
spec:
  containers:
    - name: nginx
      imagePullPolicy: IfNotPresent
      image: joshrosso/nginx-curl:v2
---
apiVersion: v1
kind: Service
metadata:
  name: tb
  namespace: team-b
spec:
  type: NodePort
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 80
      nodePort: 30002
  selector:
    app: tb
