homeworks/14-kuber-05-policy/manifests/20-netpolicy01.yaml
# Team-A egress policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: team-a-egress
  namespace: team-a
spec:
  podSelector:
    matchLabels:
      app: ta
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.0.0/16
    - ipBlock:
        cidr: 10.0.0.0/8
    ports:
    - protocol: TCP
      port: 80
  - to:
    # - namespaceSelector:
    #     matchLabels:
    #       name: kube-system 
    ports:
    - protocol: UDP
      port: 53
