homeworks/14-kuber-05-policy/manifests/30-netpolicy02.yaml
# Team-A egress policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: team-a-egress
  namespace: team-a
spec:
  podSelector:
    matchLabels:
      app: ta
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          app: team-b
  - to:
    # - namespaceSelector:
    #     matchLabels:
    #       name: kube-system 
    ports:
    - protocol: UDP
      port: 53
