homeworks/14-kuber-05-policy/manifests/50-netpolicy04.yaml
# Team-A egress policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: team-a-egress
  namespace: team-a
spec:
  podSelector:
    matchLabels:
      app: ta
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          app: team-b
      podSelector:
        matchLabels:
          app: tb
  - to:
    # - namespaceSelector:
    #     matchLabels:
    #       name: kube-system 
    ports:
    - protocol: UDP
      port: 53
---
# Team-B ingress policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: team-b-ingress
  namespace: team-b
spec:
  podSelector:
    matchLabels:
      app: tb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: team-a
      podSelector:
        matchLabels:
          app: ta
